// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<slider> demo: render [basic] correctly 1`] = `
"<div class=\\"arco-slider\\" style=\\"width: 200px;\\">
  <div class=\\"arco-slider-track\\">
    <div class=\\"arco-slider-bar\\" style=\\"left: 0%; right: 50%;\\"></div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div style=\\"left: 50%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"50\\" aria-valuetext=\\"50\\" class=\\"arco-slider-btn\\"></div>
    <!---->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<slider> demo: render [disabled] correctly 1`] = `
"<div class=\\"arco-slider\\" style=\\"width: 200px;\\">
  <div class=\\"arco-slider-track arco-slider-track-disabled\\">
    <div class=\\"arco-slider-bar\\" style=\\"left: 0%; right: 50%;\\"></div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div style=\\"left: 50%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"true\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"50\\" aria-valuetext=\\"50\\" class=\\"arco-slider-btn\\"></div>
    <!---->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<slider> demo: render [input] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\">
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\">
    <div class=\\"arco-slider\\" style=\\"width: 300px;\\">
      <div class=\\"arco-slider-track\\">
        <div class=\\"arco-slider-bar\\" style=\\"left: 0%; right: 90%;\\"></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div style=\\"left: 10%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"10\\" aria-valuetext=\\"10\\" class=\\"arco-slider-btn\\"></div>
        <!---->
      </div>
      <div class=\\"arco-slider-input\\">
        <!--v-if--><span class=\\"arco-input-wrapper arco-input-number arco-input-number-mode-embed arco-input-number-size-medium\\"><!----><input class=\\"arco-input arco-input-size-medium\\" type=\\"text\\" role=\\"spinbutton\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"10\\" value=\\"10\\"><!----><!----></span>
      </div>
    </div>
  </div>
  <!---->
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-slider\\" style=\\"width: 380px;\\">
      <div class=\\"arco-slider-track\\">
        <div class=\\"arco-slider-bar\\" style=\\"left: 10%; right: 80%;\\"></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div style=\\"left: 10%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"10\\" aria-valuetext=\\"10\\" class=\\"arco-slider-btn\\"></div>
        <!---->
        <div style=\\"left: 20%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"20\\" aria-valuetext=\\"20\\" class=\\"arco-slider-btn\\"></div>
        <!---->
      </div>
      <div class=\\"arco-slider-input\\"><span class=\\"arco-input-wrapper arco-input-number arco-input-number-mode-embed arco-input-number-size-medium\\"><!----><input class=\\"arco-input arco-input-size-medium\\" type=\\"text\\" role=\\"spinbutton\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"10\\" value=\\"10\\"><!----><!----></span>
        <div class=\\"arco-slider-input-hyphens\\"></div><span class=\\"arco-input-wrapper arco-input-number arco-input-number-mode-embed arco-input-number-size-medium\\"><!----><input class=\\"arco-input arco-input-size-medium\\" type=\\"text\\" role=\\"spinbutton\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"20\\" value=\\"20\\"><!----><!----></span>
      </div>
    </div>
  </div>
</div>"
`;

exports[`<slider> demo: render [marks] correctly 1`] = `
"<div class=\\"arco-slider arco-slider-with-marks\\" style=\\"width: 300px;\\">
  <div class=\\"arco-slider-track\\">
    <div class=\\"arco-slider-bar\\" style=\\"left: 0%; right: 66.67%;\\"></div>
    <!--v-if-->
    <div class=\\"arco-slider-dots\\">
      <div class=\\"arco-slider-dot-wrapper\\" style=\\"left: 0%;\\">
        <div class=\\"arco-slider-dot arco-slider-dot-active\\"></div>
      </div>
      <div class=\\"arco-slider-dot-wrapper\\" style=\\"left: 33.33%;\\">
        <div class=\\"arco-slider-dot arco-slider-dot-active\\"></div>
      </div>
      <div class=\\"arco-slider-dot-wrapper\\" style=\\"left: 66.67%;\\">
        <div class=\\"arco-slider-dot\\"></div>
      </div>
      <div class=\\"arco-slider-dot-wrapper\\" style=\\"left: 100%;\\">
        <div class=\\"arco-slider-dot\\"></div>
      </div>
    </div>
    <div class=\\"arco-slider-marks\\">
      <div aria-hidden=\\"true\\" class=\\"arco-slider-mark\\" style=\\"left: 0%;\\">0km</div>
      <div aria-hidden=\\"true\\" class=\\"arco-slider-mark\\" style=\\"left: 33.33%;\\">5km</div>
      <div aria-hidden=\\"true\\" class=\\"arco-slider-mark\\" style=\\"left: 66.67%;\\">10km</div>
      <div aria-hidden=\\"true\\" class=\\"arco-slider-mark\\" style=\\"left: 100%;\\">15km</div>
    </div>
    <!--v-if-->
    <div style=\\"left: 33.33%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"15\\" aria-valuemin=\\"0\\" aria-valuenow=\\"5\\" aria-valuetext=\\"5\\" class=\\"arco-slider-btn\\"></div>
    <!---->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<slider> demo: render [range] correctly 1`] = `
"<div class=\\"arco-slider\\" style=\\"width: 300px;\\">
  <div class=\\"arco-slider-track\\">
    <div class=\\"arco-slider-bar\\" style=\\"left: 5%; right: 90%;\\"></div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div style=\\"left: 5%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"5\\" aria-valuetext=\\"5\\" class=\\"arco-slider-btn\\"></div>
    <!---->
    <div style=\\"left: 10%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"10\\" aria-valuetext=\\"10\\" class=\\"arco-slider-btn\\"></div>
    <!---->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<slider> demo: render [step] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\">
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\">
    <form class=\\"arco-form arco-form-layout-inline arco-form-size-medium\\">
      <div class=\\"arco-row-align-start arco-row-justify-start arco-form-item arco-form-item-layout-inline\\">
        <div class=\\"arco-form-item-label-col\\"><label class=\\"arco-form-item-label\\">
            <!--v-if-->Step
            <!--v-if-->
            <!--v-if-->
          </label></div>
        <div class=\\"arco-form-item-wrapper-col\\" id=\\"step\\">
          <div class=\\"arco-form-item-content-wrapper\\">
            <div class=\\"arco-form-item-content arco-form-item-content-flex\\"><span class=\\"arco-input-wrapper arco-input-number arco-input-number-mode-embed arco-input-number-size-medium\\" style=\\"width: 100px;\\"><!----><input class=\\"arco-input arco-input-size-medium\\" type=\\"text\\" role=\\"spinbutton\\" aria-valuemax=\\"Infinity\\" aria-valuemin=\\"-Infinity\\" aria-valuenow=\\"5\\" value=\\"5\\"><!----><span class=\\"arco-input-suffix\\"><!----><!----><div class=\\"arco-input-number-step\\"><button class=\\"arco-input-number-step-button\\" type=\\"button\\" tabindex=\\"-1\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-up\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 30.557 24.043 15 8.487 30.557\\"></path></svg></button><button class=\\"arco-input-number-step-button\\" type=\\"button\\" tabindex=\\"-1\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-down\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M39.6 17.443 24.043 33 8.487 17.443\\"></path></svg></button></div><!----></span></span></div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <div class=\\"arco-row-align-start arco-row-justify-start arco-form-item arco-form-item-layout-inline\\">
        <div class=\\"arco-form-item-label-col\\"><label class=\\"arco-form-item-label\\">
            <!--v-if-->Show steps
            <!--v-if-->
            <!--v-if-->
          </label></div>
        <div class=\\"arco-form-item-wrapper-col\\" id=\\"showTicks\\">
          <div class=\\"arco-form-item-content-wrapper\\">
            <div class=\\"arco-form-item-content arco-form-item-content-flex\\"><button type=\\"button\\" role=\\"switch\\" aria-checked=\\"true\\" class=\\"arco-switch arco-switch-type-circle arco-switch-checked\\"><span class=\\"arco-switch-handle\\"><span class=\\"arco-switch-handle-icon\\"></span></span><!--  prettier-ignore  -->
                <!--v-if-->
              </button></div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </form>
  </div>
  <!---->
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-slider\\" style=\\"width: 300px;\\">
      <div class=\\"arco-slider-track\\">
        <div class=\\"arco-slider-bar\\" style=\\"left: 0%; right: 80%;\\"></div>
        <div class=\\"arco-slider-ticks\\">
          <div class=\\"arco-slider-tick arco-slider-tick-active\\" style=\\"left: 5%;\\"></div>
          <div class=\\"arco-slider-tick arco-slider-tick-active\\" style=\\"left: 10%;\\"></div>
          <div class=\\"arco-slider-tick arco-slider-tick-active\\" style=\\"left: 15%;\\"></div>
          <div class=\\"arco-slider-tick arco-slider-tick-active\\" style=\\"left: 20%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 25%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 30%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 35%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 40%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 45%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 50%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 55%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 60%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 65%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 70%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 75%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 80%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 85%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 90%;\\"></div>
          <div class=\\"arco-slider-tick\\" style=\\"left: 95%;\\"></div>
        </div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div style=\\"left: 20%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"20\\" aria-valuetext=\\"20\\" class=\\"arco-slider-btn\\"></div>
        <!---->
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`<slider> demo: render [tooltip] correctly 1`] = `
"<div class=\\"arco-slider\\" style=\\"width: 200px;\\">
  <div class=\\"arco-slider-track\\">
    <div class=\\"arco-slider-bar\\" style=\\"left: 0%; right: 100%;\\"></div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div style=\\"left: 0%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"50\\" aria-valuemin=\\"0\\" aria-valuenow=\\"0\\" aria-valuetext=\\"0%\\" class=\\"arco-slider-btn\\"></div>
    <!---->
  </div>
  <!--v-if-->
</div>"
`;

exports[`<slider> demo: render [vertical] correctly 1`] = `
"<div class=\\"arco-space arco-space-horizontal arco-space-align-start\\">
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-right: 8px;\\">
    <div class=\\"arco-slider arco-slider-vertical\\">
      <div class=\\"arco-slider-track arco-slider-track-vertical\\">
        <div class=\\"arco-slider-bar\\" style=\\"bottom: 0%; top: 50%;\\"></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div style=\\"bottom: 50%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"100\\" aria-valuemin=\\"0\\" aria-valuenow=\\"50\\" aria-valuetext=\\"50\\" class=\\"arco-slider-btn\\"></div>
        <!---->
      </div>
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-slider arco-slider-vertical arco-slider-with-marks\\" style=\\"width: 300px;\\">
      <div class=\\"arco-slider-track arco-slider-track-vertical\\">
        <div class=\\"arco-slider-bar\\" style=\\"bottom: 0%; top: 66.67%;\\"></div>
        <!--v-if-->
        <div class=\\"arco-slider-dots\\">
          <div class=\\"arco-slider-dot-wrapper\\" style=\\"bottom: 33.33%;\\">
            <div class=\\"arco-slider-dot arco-slider-dot-active\\"></div>
          </div>
          <div class=\\"arco-slider-dot-wrapper\\" style=\\"bottom: 66.67%;\\">
            <div class=\\"arco-slider-dot\\"></div>
          </div>
        </div>
        <div class=\\"arco-slider-marks\\">
          <div aria-hidden=\\"true\\" class=\\"arco-slider-mark\\" style=\\"bottom: 33.33%;\\">5km</div>
          <div aria-hidden=\\"true\\" class=\\"arco-slider-mark\\" style=\\"bottom: 66.67%;\\">10km</div>
        </div>
        <!--v-if-->
        <div style=\\"bottom: 33.33%;\\" tabindex=\\"0\\" role=\\"slider\\" aria-disabled=\\"false\\" aria-valuemax=\\"15\\" aria-valuemin=\\"0\\" aria-valuenow=\\"5\\" aria-valuetext=\\"5\\" class=\\"arco-slider-btn\\"></div>
        <!---->
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;
